obs/2.4.0/fast_likelihood_quarks.yaml.md
---
layout: default
title: Observables - fast_likelihood_quarks.yaml
---

# List of all observables included in fast_likelihood_quarks.yaml

{: class="table"}
| Symbol | Name | Arguments |
|------|--------|--------------|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 0.04, q2max = 2|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 2, q2max = 4|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 0.04, q2max = 2|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 2, q2max = 4|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 0.04, q2max = 2|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 2, q2max = 4|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 0.04, q2max = 2|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 2, q2max = 4|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<dBR/dq2>(B+->K*mumu)` | q2min = 2.0, q2max = 4.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<dBR/dq2>(B+->K*mumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<dBR/dq2>(B+->K*mumu)` | q2min = 15.0, q2max = 19.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 2.5, q2max = 4.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 15.0, q2max = 19.0|
| $\langle \frac{d\overline{\text{BR}}}{dq^2} \rangle(B_s\to \phi \mu^+\mu^-)$ | `<dBR/dq2>(Bs->phimumu)` | q2min = 0.1, q2max = 0.98|
| $\langle \frac{d\overline{\text{BR}}}{dq^2} \rangle(B_s\to \phi \mu^+\mu^-)$ | `<dBR/dq2>(Bs->phimumu)` | q2min = 1.1, q2max = 2.5|
| $\langle \frac{d\overline{\text{BR}}}{dq^2} \rangle(B_s\to \phi \mu^+\mu^-)$ | `<dBR/dq2>(Bs->phimumu)` | q2min = 2.5, q2max = 4.0|
| $\langle \frac{d\overline{\text{BR}}}{dq^2} \rangle(B_s\to \phi \mu^+\mu^-)$ | `<dBR/dq2>(Bs->phimumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \frac{d\overline{\text{BR}}}{dq^2} \rangle(B_s\to \phi \mu^+\mu^-)$ | `<dBR/dq2>(Bs->phimumu)` | q2min = 1.0, q2max = 6.0|
| $\langle \frac{d\overline{\text{BR}}}{dq^2} \rangle(B_s\to \phi \mu^+\mu^-)$ | `<dBR/dq2>(Bs->phimumu)` | q2min = 15.0, q2max = 19.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 1.1, q2max = 2.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 2.0, q2max = 3.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 3.0, q2max = 4.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 4.0, q2max = 5.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 5.0, q2max = 6.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 15.0, q2max = 22.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^0\mu^+\mu^-)$ | `<dBR/dq2>(B0->Kmumu)` | q2min = 2.0, q2max = 4.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^0\mu^+\mu^-)$ | `<dBR/dq2>(B0->Kmumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^0\mu^+\mu^-)$ | `<dBR/dq2>(B0->Kmumu)` | q2min = 15.0, q2max = 22.0|
| $\langle \text{BR} \rangle(B\to X_s\mu^+\mu^-)$ | `<BR>(B->Xsmumu)` | q2min = 1.0, q2max = 6.0|
| $\langle \text{BR} \rangle(B\to X_s\mu^+\mu^-)$ | `<BR>(B->Xsmumu)` | q2min = 14.2, q2max = 25.0|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 0, q2max = 2|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 1, q2max = 2|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 2, q2max = 4.3|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<dBR/dq2>(B0->K*mumu)` | q2min = 4.3, q2max = 6|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<dBR/dq2>(B+->K*mumu)` | q2min = 0, q2max = 2|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<dBR/dq2>(B+->K*mumu)` | q2min = 2, q2max = 4.3|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^0\mu^+\mu^-)$ | `<dBR/dq2>(B0->Kmumu)` | q2min = 0, q2max = 2|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^0\to K^0\mu^+\mu^-)$ | `<dBR/dq2>(B0->Kmumu)` | q2min = 2, q2max = 4.3|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 0, q2max = 2|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to K^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->Kmumu)` | q2min = 2, q2max = 4.3|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 0, q2max = 2|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 2, q2max = 4.3|
| $\langle A_\text{FB}\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<AFB>(B0->K*mumu)` | q2min = 0, q2max = 2|
| $\langle A_\text{FB}\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<AFB>(B0->K*mumu)` | q2min = 2, q2max = 4.3|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 1, q2max = 2|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 4.3, q2max = 6|
| $\langle A_\text{FB}\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<AFB>(B0->K*mumu)` | q2min = 1, q2max = 2|
| $\langle A_\text{FB}\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<AFB>(B0->K*mumu)` | q2min = 4.3, q2max = 6|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 1, q2max = 2|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 2, q2max = 4.3|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 4.3, q2max = 6|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 1, q2max = 2|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 2, q2max = 4.3|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 4.3, q2max = 6|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle F_L\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<FL>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_1\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P1>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_2\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P2>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_2\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P2>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_2\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P2>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_2\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P2>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_2\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P2>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_3\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P3>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_3\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P3>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_3\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P3>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_3\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P3>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_3\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P3>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_4^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P4p>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_5^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P5p>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_6^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P6p>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_6^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P6p>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_6^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P6p>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_6^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P6p>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_6^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P6p>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_8^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P8p>(B0->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_8^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P8p>(B0->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_8^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P8p>(B0->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_8^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P8p>(B0->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_8^\prime\rangle(B^0\to K^{\ast 0}\mu^+\mu^-)$ | `<P8p>(B0->K*mumu)` | q2min = 15, q2max = 19|
| $\langle F_L\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<FL>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle F_L\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<FL>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle F_L\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<FL>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle F_L\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<FL>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle F_L\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<FL>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_1\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P1>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_1\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P1>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_1\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P1>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_1\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P1>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_1\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P1>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_2\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P2>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_2\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P2>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_2\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P2>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_2\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P2>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_2\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P2>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_3\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P3>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_3\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P3>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_3\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P3>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_3\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P3>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_3\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P3>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_4^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P4p>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_4^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P4p>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_4^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P4p>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_4^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P4p>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_4^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P4p>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_5^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P5p>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_5^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P5p>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_5^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P5p>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_5^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P5p>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_5^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P5p>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_6^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P6p>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_6^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P6p>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_6^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P6p>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_6^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P6p>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_6^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P6p>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle P_8^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P8p>(B+->K*mumu)` | q2min = 0.1, q2max = 0.98|
| $\langle P_8^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P8p>(B+->K*mumu)` | q2min = 1.1, q2max = 2.5|
| $\langle P_8^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P8p>(B+->K*mumu)` | q2min = 2.5, q2max = 4|
| $\langle P_8^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P8p>(B+->K*mumu)` | q2min = 4, q2max = 6|
| $\langle P_8^\prime\rangle(B^+\to K^{\ast +}\mu^+\mu^-)$ | `<P8p>(B+->K*mumu)` | q2min = 15, q2max = 19|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(\Lambda_b\to\Lambda \mu^+\mu^-)$ | `<dBR/dq2>(Lambdab->Lambdamumu)` | q2min = 15, q2max = 20|
| $\langle A_\text{FB}^h\rangle(\Lambda_b\to\Lambda \mu^+\mu^-)$ | `<AFBh>(Lambdab->Lambdamumu)` | q2min = 15, q2max = 20|
| $\langle A_\text{FB}^\ell\rangle(\Lambda_b\to\Lambda \mu^+\mu^-)$ | `<AFBl>(Lambdab->Lambdamumu)` | q2min = 15, q2max = 20|
| $\langle A_\text{FB}^{\ell h}\rangle(\Lambda_b\to\Lambda \mu^+\mu^-)$ | `<AFBlh>(Lambdab->Lambdamumu)` | q2min = 15, q2max = 20|
| $\overline{\text{BR}}(B_s\to \mu^+\mu^-)$ | `BR(Bs->mumu)` | |
| $\text{BR}(B^0\to \mu^+\mu^-)$ | `BR(B0->mumu)` | |
| $\tau_{B_s \to \mu\mu}$ | `tau_mumu` | |
| $\overline{\text{BR}}(B_s\to e^+e^-)$ | `BR(Bs->ee)` | |
| $\text{BR}(B^0\to e^+e^-)$ | `BR(B0->ee)` | |
| $\text{BR}(B^+\to K^{*+}\gamma)$ | `BR(B+->K*gamma)` | |
| $\text{BR}(B^0\to K^{*0}\gamma)$ | `BR(B0->K*gamma)` | |
| $\text{BR}(B\to X_s\gamma)$ | `BR(B->Xsgamma)` | |
| $A_\text{CP}(B\to X_{s+d}\gamma)$ | `ACP(B->Xgamma)` | |
| $\frac{\text{BR}(B^0\to K^{*0}\gamma)}{\overline{\text{BR}}(B_s\to \phi\gamma)}$ | `BR(B0->K*gamma)/BR(Bs->phigamma)` | |
| $\overline{\text{BR}}(B_s\to \phi\gamma)$ | `BR(Bs->phigamma)` | |
| $A_{\Delta\Gamma}(B_s\to \phi\gamma)$ | `ADeltaGamma(Bs->phigamma)` | |
| $S_{\phi\gamma}$ | `S_phigamma` | |
| $S_{K^{*}\gamma}$ | `S_K*gamma` | |
| $\langle \overline{F_L}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<FL>(Bs->phimumu)` | q2min = 0.1, q2max = 0.98|
| $\langle \overline{F_L}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<FL>(Bs->phimumu)` | q2min = 1.1, q2max = 4.0|
| $\langle \overline{F_L}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<FL>(Bs->phimumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \overline{F_L}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<FL>(Bs->phimumu)` | q2min = 15.0, q2max = 18.9|
| $\langle \overline{S_3}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S3>(Bs->phimumu)` | q2min = 0.1, q2max = 0.98|
| $\langle \overline{S_3}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S3>(Bs->phimumu)` | q2min = 1.1, q2max = 4.0|
| $\langle \overline{S_3}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S3>(Bs->phimumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \overline{S_3}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S3>(Bs->phimumu)` | q2min = 15.0, q2max = 18.9|
| $\langle \overline{S_4}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S4>(Bs->phimumu)` | q2min = 0.1, q2max = 0.98|
| $\langle \overline{S_4}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S4>(Bs->phimumu)` | q2min = 1.1, q2max = 4.0|
| $\langle \overline{S_4}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S4>(Bs->phimumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \overline{S_4}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S4>(Bs->phimumu)` | q2min = 15.0, q2max = 18.9|
| $\langle \overline{S_7}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S7>(Bs->phimumu)` | q2min = 0.1, q2max = 0.98|
| $\langle \overline{S_7}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S7>(Bs->phimumu)` | q2min = 1.1, q2max = 4.0|
| $\langle \overline{S_7}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S7>(Bs->phimumu)` | q2min = 4.0, q2max = 6.0|
| $\langle \overline{S_7}\rangle(B_s\to \phi \mu^+\mu^-)$ | `<S7>(Bs->phimumu)` | q2min = 15.0, q2max = 18.9|
| $\langle \text{BR} \rangle(B\to X_se^+e^-)$ | `<BR>(B->Xsee)` | q2min = 1.0, q2max = 6.0|
| $\langle \text{BR} \rangle(B\to X_se^+e^-)$ | `<BR>(B->Xsee)` | q2min = 14.2, q2max = 25.0|
| $\langle P_2\rangle(B^0\to K^{\ast 0}e^+e^-)$ | `<P2>(B0->K*ee)` | q2min = 0.000784, q2max = 0.257|
| $\langle F_L\rangle(B^0\to K^{\ast 0}e^+e^-)$ | `<FL>(B0->K*ee)` | q2min = 0.000784, q2max = 0.257|
| $\langle P_1\rangle(B^0\to K^{\ast 0}e^+e^-)$ | `<P1>(B0->K*ee)` | q2min = 0.000784, q2max = 0.257|
| $\langle A_T^\text{Im}\rangle(B^0\to K^{\ast 0}e^+e^-)$ | `<ATIm>(B0->K*ee)` | q2min = 0.000784, q2max = 0.257|
| $\text{BR}(B^0\to \pi^- \tau^+\nu_\tau)$ | `BR(B0->pitaunu)` | |
| $\text{BR}(B^+\to \mu^+\nu)$ | `BR(B+->munu)` | |
| $\Delta M_s$ | `DeltaM_s` | |
| $x_{12}^{\text{Im},D}$ | `x12Im_D` | |
| $S_{\psi K_S}$ | `S_psiK` | |
| $S_{\psi\phi}$ | `S_psiphi` | |
| $\vert\epsilon_K\vert$ | `eps_K` | |
| $\epsilon^\prime/\epsilon$ | `epsp/eps` | |
| $\text{BR}(K^+\to\pi^+\nu\bar\nu)$ | `BR(K+->pinunu)` | |
| $\text{BR}(K_L\to\pi^0\nu\bar\nu)$ | `BR(KL->pinunu)` | |
| $\text{BR}(K_L\to \mu^+\mu^-)$ | `BR(KL->mumu)` | |
| $\text{BR}(K_S\to \mu^+\mu^-)$ | `BR(KS->mumu)` | |
| $\text{BR}(K_L\to e^+e^-)$ | `BR(KL->ee)` | |
| $\text{BR}(K_S\to e^+e^-)$ | `BR(KS->ee)` | |
| $\text{BR}(K^+\to \mu^+\nu)$ | `BR(K+->munu)` | |
| $\text{BR}(K_L\to \pi^+e^+\nu)$ | `BR(KL->pienu)` | |
| $\text{BR}(K_S\to \pi^+e^+\nu)$ | `BR(KS->pienu)` | |
| $\text{BR}(K^+\to \pi^0e^+\nu)$ | `BR(K+->pienu)` | |
| $\text{BR}(K_L\to \pi^+\mu^+\nu)$ | `BR(KL->pimunu)` | |
| $\text{BR}(K_S\to \pi^+\mu^+\nu)$ | `BR(KS->pimunu)` | |
| $\text{BR}(K^+\to \pi^0\mu^+\nu)$ | `BR(K+->pimunu)` | |
| $\ln(C)(K^+\to \pi^0\mu^+\nu)$ | `lnC(K->pimunu)` | |
| $R_T(K^+\to \pi^0\mu^+\nu)$ | `RT(K->pimunu)` | |
| $\text{BR}(D^+\to e^+\nu_e)$ | `BR(D+->enu)` | |
| $\text{BR}(D^+\to \mu^+\nu_\mu)$ | `BR(D+->munu)` | |
| $\text{BR}(D^+\to \tau^+\nu_\tau)$ | `BR(D+->taunu)` | |
| $\text{BR}(D_s\to e^+\nu_e)$ | `BR(Ds->enu)` | |
| $\text{BR}(D_s\to \mu^+\nu_\mu)$ | `BR(Ds->munu)` | |
| $\text{BR}(D_s\to \tau^+\nu_\tau)$ | `BR(Ds->taunu)` | |
| $\text{BR}(D^0\to \pi^- \mu^+\nu_\mu)$ | `BR(D0->pimunu)` | |
| $\text{BR}(D^0\to \pi^- e^+\nu_e)$ | `BR(D0->pienu)` | |
| $\text{BR}(D^0\to K^- e^+\nu_e)$ | `BR(D0->Kenu)` | |
| $\text{BR}(D^0\to K^- \mu^+\nu_\mu)$ | `BR(D0->Kmunu)` | |
| $\text{BR}(D^+\to \pi^0e^+\nu_e)$ | `BR(D+->pienu)` | |
| $\text{BR}(D^+\to \pi^0\mu^+\nu_\mu)$ | `BR(D+->pimunu)` | |
| $\text{BR}(D^+\to K^0e^+\nu_e)$ | `BR(D+->Kenu)` | |
| $\text{BR}(D^+\to K^0\mu^+\nu_\mu)$ | `BR(D+->Kmunu)` | |
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.0, q2max = 0.3|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.3, q2max = 0.6|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.6, q2max = 0.9|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.9, q2max = 1.2|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.2, q2max = 1.5|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.5, q2max = 2|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 2, q2max = 2.98|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 0.0, q2max = 0.3|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 0.3, q2max = 0.6|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 0.6, q2max = 0.9|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 0.9, q2max = 1.2|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 1.2, q2max = 1.5|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 1.5, q2max = 2|
| $\langle\text{BR}\rangle(D^+\to \pi^0e^+\nu_e)$ | `<BR>(D+->pienu)` | q2min = 2, q2max = 2.98|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.0, q2max = 0.2|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.2, q2max = 0.4|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.4, q2max = 0.6|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.6, q2max = 0.8|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 0.8, q2max = 1.0|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.0, q2max = 1.2|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.2, q2max = 1.4|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.4, q2max = 1.6|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.6, q2max = 1.8|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 1.8, q2max = 2.0|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 2.0, q2max = 2.2|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 2.2, q2max = 2.4|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 2.4, q2max = 2.6|
| $\langle\text{BR}\rangle(D^0\to \pi^- e^+\nu_e)$ | `<BR>(D0->pienu)` | q2min = 2.6, q2max = 2.98|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.0, q2max = 0.2|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.2, q2max = 0.4|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.4, q2max = 0.6|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.6, q2max = 0.8|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.8, q2max = 1.0|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.0, q2max = 1.2|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.2, q2max = 1.4|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.4, q2max = 1.6|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.6, q2max = 1.88|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 0.0, q2max = 0.2|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 0.2, q2max = 0.4|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 0.4, q2max = 0.6|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 0.6, q2max = 0.8|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 0.8, q2max = 1.0|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 1.0, q2max = 1.2|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 1.2, q2max = 1.4|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 1.4, q2max = 1.6|
| $\langle\text{BR}\rangle(D^+\to K^0e^+\nu_e)$ | `<BR>(D+->Kenu)` | q2min = 1.6, q2max = 1.88|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.0, q2max = 0.1|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.1, q2max = 0.2|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.2, q2max = 0.3|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.3, q2max = 0.4|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.4, q2max = 0.5|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.5, q2max = 0.6|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.6, q2max = 0.7|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.7, q2max = 0.8|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.8, q2max = 0.9|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 0.9, q2max = 1.0|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.0, q2max = 1.1|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.1, q2max = 1.2|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.2, q2max = 1.3|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.3, q2max = 1.4|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.4, q2max = 1.5|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.5, q2max = 1.6|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.6, q2max = 1.7|
| $\langle\text{BR}\rangle(D^0\to K^- e^+\nu_e)$ | `<BR>(D0->Kenu)` | q2min = 1.7, q2max = 1.88|
| $\tau_n$ | `tau_n` | me_E = 0.655|
| $\tilde{A}_n$ | `Atilde_n` | me_E = 0.559|
| $\tilde{A}_n$ | `Atilde_n` | me_E = 0.586|
| $\lambda_{AB}$ | `lambdaAB_n` | me_E = 0.581|
| $a_n$ | `a_n` | |
| $\tilde{a}_n$ | `atilde_n` | me_E = 0.695|
| $\tilde{B}_n$ | `Btilde_n` | me_E = 0.591|
| $D_n$ | `D_n` | |
| $R_n$ | `R_n` | |
| $\mathcal{F}t({}^{10}\text{C})$ | `Ft(10C)` | |
| $\mathcal{F}t({}^{14}\text{O})$ | `Ft(14O)` | |
| $\mathcal{F}t({}^{22}\text{Mg})$ | `Ft(22Mg)` | |
| $\mathcal{F}t({}^{26m}\text{Al})$ | `Ft(26mAl)` | |
| $\mathcal{F}t({}^{34}\text{Cl})$ | `Ft(34Cl)` | |
| $\mathcal{F}t({}^{34}\text{Ar})$ | `Ft(34Ar)` | |
| $\mathcal{F}t({}^{38m}\text{K})$ | `Ft(38mK)` | |
| $\mathcal{F}t({}^{38}\text{Ca})$ | `Ft(38Ca)` | |
| $\mathcal{F}t({}^{42}\text{Sc})$ | `Ft(42Sc)` | |
| $\mathcal{F}t({}^{46}\text{V})$ | `Ft(46V)` | |
| $\mathcal{F}t({}^{50}\text{Mn})$ | `Ft(50Mn)` | |
| $\mathcal{F}t({}^{54}\text{Co})$ | `Ft(54Co)` | |
| $\mathcal{F}t({}^{62}\text{Ga})$ | `Ft(62Ga)` | |
| $\mathcal{F}t({}^{74}\text{Rb})$ | `Ft(74Rb)` | |
| $\Gamma(\pi^+\to \mu^+\nu)$ | `Gamma(pi+->munu)` | |
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to \pi^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->pimumu)` | q2min = 2, q2max = 4|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to \pi^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->pimumu)` | q2min = 4, q2max = 6|
| $\langle \frac{d\text{BR}}{dq^2} \rangle(B^\pm\to \pi^\pm \mu^+\mu^-)$ | `<dBR/dq2>(B+->pimumu)` | q2min = 15, q2max = 22|
| $\overline{\text{BR}}(B_s\to K^* \mu^+\mu^-)$ | `BR_LHCb(Bs->K*0mumu)` | |
| $\text{BR}(B^\pm\to \pi^\pm e^+e^-)$ | `BR_Belle(B+->piee)` | |
